- Added Java 10 specific JVM args (from build.xml) to Gradle test task (Fixes 4 broken tests)