@@ -208,6 +208,8 @@ test {
     exclude "**/SplitInputStreamTest.class"
     exclude "**/JPF_*.class"
 
+    jvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'];
+
     testLogging {
         events "passed", "skipped", "failed"
     }
